Revision of statement class

--- a/Plugins/Sqlite3/Config/DefaultSqlite3.ini
+++ b/Plugins/Sqlite3/Config/DefaultSqlite3.ini
@@ -4,3 +4,7 @@
 +ClassRedirects=(OldName="/Script/Sqlite3Editor.SqliteDatabaseInfosFactory",NewName="/Script/Sqlite3Editor.SqliteDatabaseInfoFactory")
 +ClassRedirects=(OldName="/Script/Sqlite3Editor.SqliteDatabaseInfosThumbnailRenderer",NewName="/Script/Sqlite3Editor.SqliteDatabaseInfoThumbnailRenderer")
 +ClassRedirects=(OldName="/Script/Sqlite3Editor.SqliteDatabaseInfosValidator",NewName="/Script/Sqlite3Editor.SqliteDatabaseInfoValidator")
++EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseTrueFalseExecutionPins",ValueChanges=(("IsTrue","Equal")))
++EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseTrueFalseExecutionPins",ValueChanges=(("IsFalse","NoEqual")))
++EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseTrueFalseExecutionPins",NewName="/Script/Sqlite3.ESqliteDatabaseEqualityExecutionPins")
++EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseEqualityExecutionPins",ValueChanges=(("NoEqual","NotEqual")))
