Splitted extracted K2 code from Sqlite3Editor module to Sqlite3Tools module.

--- a/Plugins/Sqlite3/Config/DefaultSqlite3.ini
+++ b/Plugins/Sqlite3/Config/DefaultSqlite3.ini
@@ -8,3 +8,4 @@
 +EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseTrueFalseExecutionPins",ValueChanges=(("IsFalse","NoEqual")))
 +EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseTrueFalseExecutionPins",NewName="/Script/Sqlite3.ESqliteDatabaseEqualityExecutionPins")
 +EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseEqualityExecutionPins",ValueChanges=(("NoEqual","NotEqual")))
++PropertyRedirects=(OldName="/Script/Sqlite3.DatabaseTable.bWithoudRowId",NewName="/Script/Sqlite3.DatabaseTable.bWithoutRowId")
