Added PreSave support for custom table sql create commands generation.

--- a/Plugins/Sqlite3/Config/DefaultSqlite3.ini
+++ b/Plugins/Sqlite3/Config/DefaultSqlite3.ini
@@ -9,3 +9,6 @@
 +EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseTrueFalseExecutionPins",NewName="/Script/Sqlite3.ESqliteDatabaseEqualityExecutionPins")
 +EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseEqualityExecutionPins",ValueChanges=(("NoEqual","NotEqual")))
 +PropertyRedirects=(OldName="/Script/Sqlite3.DatabaseTable.bWithoudRowId",NewName="/Script/Sqlite3.DatabaseTable.bWithoutRowId")
++PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.bTableGenerated",NewName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateTableSqlCommandsGenerated")
++PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateTableSqlCommandsChecked",NewName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateTableSqlCommandsGenerated")
++PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.GeneratedTableSqlCommands",NewName="/Script/Sqlite3.SqliteDatabaseInfo.GeneratedCreateTableSqlCommands")
