--- a/Sqlite3PluginDemo.uproject
+++ b/Sqlite3PluginDemo.uproject
@@ -23,5 +23,8 @@
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/8480a6b969b047aca3ab8957509730dd"
 		}
+	],
+	"TargetPlatforms": [
+		"Windows"
 	]
 }
