Cleaned validation code again

--- a/Plugins/Sqlite3/Config/DefaultSqlite3.ini
+++ b/Plugins/Sqlite3/Config/DefaultSqlite3.ini
@@ -9,6 +9,13 @@
 +EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseTrueFalseExecutionPins",NewName="/Script/Sqlite3.ESqliteDatabaseEqualityExecutionPins")
 +EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseEqualityExecutionPins",ValueChanges=(("NoEqual","NotEqual")))
 +PropertyRedirects=(OldName="/Script/Sqlite3.DatabaseTable.bWithoudRowId",NewName="/Script/Sqlite3.DatabaseTable.bWithoutRowId")
-+PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.bTableGenerated",NewName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateTableSqlCommandsGenerated")
-+PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateTableSqlCommandsChecked",NewName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateTableSqlCommandsGenerated")
-+PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.GeneratedTableSqlCommands",NewName="/Script/Sqlite3.SqliteDatabaseInfo.GeneratedCreateTableSqlCommands")
++PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.bTableGenerated",NewName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateDatabaseSqlCommandsGenerated")
++PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateTableSqlCommandsChecked",NewName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateDatabaseSqlCommandsGenerated")
++PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.GeneratedTableSqlCommands",NewName="/Script/Sqlite3.SqliteDatabaseInfo.GeneratedDatabaseSqlCommands")
++PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.GeneratedCreateTableSqlCommands",NewName="/Script/Sqlite3.SqliteDatabaseInfo.GeneratedDatabaseSqlCommands")
++PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateTableSqlCommandsGenerated",NewName="/Script/Sqlite3.SqliteDatabaseInfo.bCreateDatabaseSqlCommandsGenerated")
++PropertyRedirects=(OldName="/Script/Sqlite3.SqliteDatabaseInfo.CustomSqlCommands",NewName="/Script/Sqlite3.SqliteDatabaseInfo.ExtraSqlCommands")
++PropertyRedirects=(OldName="/Script/Sqlite3.DatabaseColumn.ExtraConstraint",NewName="/Script/Sqlite3.DatabaseColumn.ExtraColumnConstraint")
++PropertyRedirects=(OldName="/Script/Sqlite3.DatabaseTable.ExtraConstraints",NewName="/Script/Sqlite3.DatabaseTable.ExtraTableConstraints")
++EnumRedirects=(OldName="/Script/Sqlite3.ESqliteDatabaseColumnType",NewName="/Script/Sqlite3.ESqliteDatabaseColumnAffinity")
++PropertyRedirects=(OldName="/Script/Sqlite3.DatabaseColumn.ColumnType",NewName="/Script/Sqlite3.DatabaseColumn.ColumnAffinity")
